# pasteguard

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  biome.json  config.example.yaml  docker-compose.yml  package-lock.json  package.json  tsconfig.benchmarks.json
.conductor/: settings.toml
.github/workflows/: ci.yml  release.yml
benchmarks/pii-accuracy/: README.md  run.ts  taxonomy.ts  types.ts
detector/: pyproject.toml
detector/detector/: __init__.py  app.py  deterministic.py  entities.py  gliner_layer.py  merge.py
detector/tests/: test_analyze.py  test_deterministic.py  test_gliner_layer.py  test_merge.py
docker/: Dockerfile  entrypoint.sh  supervisord.conf  supervisord.conf.template
docker/presidio/: generate-configs.py  languages.yaml
docs/: installation.mdx  introduction.mdx  quickstart.mdx
docs/api-reference/: anthropic.mdx  dashboard-api.mdx  mask.mdx  openai.mdx  status.mdx
docs/concepts/: mask-mode.mdx  pii-detection.mdx  route-mode.mdx  secrets-detection.mdx
docs/configuration/: logging.mdx  overview.mdx  pii-detection.mdx  secrets-detection.mdx
docs/use-cases/: apps.mdx  chat.mdx  coding-tools.mdx
src/: config.test.ts  config.ts  index.ts
src/constants/: languages.ts  timeouts.ts
src/masking/: conflict-resolver.ts  context-enrichment.ts  context.ts  placeholders.test.ts  placeholders.ts  service.test.ts  service.ts
src/middleware/: concurrency.ts  presidio-throttle.ts
src/pii/: detect.test.ts  detect.ts  mask.test.ts  mask.ts
src/routes/: anthropic.ts  api.test.ts  api.ts  codex.test.ts  codex.ts  health.ts  (+4 more)
(+33 files in other folders)
