[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pasteguard-detector"
version = "0.1.0"
description = "/analyze PII detector: deterministic regex/checksum + multilingual GLiNER NER."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2",
    "gliner>=0.2.13",
    "python-stdnum>=1.20",
    "phonenumbers>=8.13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6", "pyright>=1.1"]

[tool.setuptools]
packages = ["detector"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["detector"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Third-party deps (gliner, python-stdnum, phonenumbers) ship no type stubs;
# their symbols are treated as untyped rather than flagged.
reportMissingTypeStubs = false
